# beryl

./: .clang-format  .gitignore  README.md  meson.build
docker/: Dockerfile_ubuntu_bionic  ubuntu_focal.dockerfile
ganvigar/: dev.conf  dev.conf.dockerfile  dev.dockerfile
include/: meson.build
lib/: meson.build
lib/beryl/: chrono.hpp  domain_name.cpp  domain_name.hpp  domain_tree.hpp  read_zone.cpp  read_zone.hpp  record_class.hpp  record_consumer.hpp  record_type.hpp  record_visitor.hpp  resource_record.hpp  string.hpp  tokenizer.hpp
man/: beryl.1  meson.build
playground/named/abbreviated_zone_files/: db.127.0.0  db.192.249.249  db.192.253.253  db.movie.edu  named.conf
playground/named/full_zone_files/: db.127.0.0  db.192.249.249  db.192.253.253  db.cache  db.movie.edu  named.conf
tools/: clang-format.sh  clang-tidy.sh
unit_testing/: meson.build
unit_testing/include/unit_testing/: expect_throw_msg_eq.hpp
unit_tests/: meson.build
unit_tests/beryl/: domain_name_test.cpp  domain_tree_test.cpp  read_zone_test.cpp  resource_record_test.cpp  string_test.cpp  tokenizer_test.cpp
